--- a/assets/Css/style.css
+++ b/assets/Css/style.css
@@ -16,6 +16,36 @@ body {
   p{
     color: white;
   }
+  section{
+    margin: 100px auto;
+  }
+  .banner{
+    background-image: linear-gradient(rgba(0, 0, 0, .6), rgba(49, 168, 221, .2), rgba(0, 0, 0, .6)), url('../images/banner.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 600px;
+    padding-top: 60px;
+    border-bottom: 1px solid #33A8DB80;
+  }
+  .banner .banner-content {
+    color: white;
+    width: 600px;
+    margin: auto;
+    text-align: center;
+  }
+  .banner h1 {
+    font-size: 2.5rem;
+    font-weight: 900;
+    text-transform: uppercase;
+    color: transparent;
+    background: -webkit-linear-gradient(#33A8DB, #1472B7);
+    background-clip: text;
+    -webkit-background-clip: text;
+  }
 
-
+  .banner p {
+    font-size: 1.25rem;
+    margin: 16px 0 24px;
+  }
+  
 
