Course-content estilização

--- a/assets/Css/style.css
+++ b/assets/Css/style.css
@@ -77,5 +77,31 @@ body {
     border-image-slice: 10;
     border-radius: 30px;
   }
+
+  #course-content {
+    width: 800px;
+    text-align: center;
+  
+  }
+
+  #course-content .modules-list {
+    margin: 24px 0;
+  }
+  
+  #course-content .modules-list .module {
+    color: white;
+    width: 530px;
+    margin: 0 auto 24px;
+    border: 1px solid #33A8DB;
+    background-color: #252525;
+    padding: 16px;
+    border-radius: 100px;
+    box-shadow: inset -5px 6px 8px rgba(0, 0, 0, .7);
+  }
+
+  
+#course-content .modules-list .module span {
+    color: #33A8DB;
+  }
   
   
