--- a/assets/Css/style.css
+++ b/assets/Css/style.css
@@ -121,4 +121,14 @@ body {
     max-width: 250px;
     text-shadow: 3px 2px #33A8DB;
   }
+
+  #professional-challenges {
+    text-align: center;
+    width: 800px;
+  }
+  
+  #professional-challenges img {
+    margin: 32px 0;
+  }
+  
     
